--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
     "axios": "^1.6.7",
+    "dotenv": "^17.2.3",
+    "express": "^4.19.2",
     "openai": "^4.0.0"
   },
   "engines": {
